# mylang-compiler

./: .gitignore  Makefile  README.md  run-test.sh  todo.txt  usage-main.sn
docs/: architecture.md  grammar.txt  syntax.md  testing.md
sample_code/: advanced-struct.sn  basic-arithmetic.sn  bitwise-operators.sn  cmd-line-arguments.sn  copies-refs.sn  explicit-casting.sn  (+15 more)
testing/: CMakeLists.txt  main.cpp  test_ir.cpp  test_lexer.cpp  test_parser.cpp  test_symtab.cpp  test_x86_64_gen.cpp  util.h
testing/old-snapshots/: test_ir.IrTests.IrControlFlow.approved.txt  test_ir.IrTests.IrFunctions.approved.txt  test_ir.IrTests.IrPointers.approved.txt  test_ir.IrTests.IrStdin.approved.txt  test_ir.IrTests.IrStructs.approved.txt  test_lexer.LexerTests.LexerFunctions.approved.txt  test_lexer.LexerTests.LexerPointers.approved.txt  test_parser.ParserTests.ParserAsmAndErrors.approved.txt  test_parser.ParserTests.ParserControlFlow.approved.txt  test_parser.ParserTests.ParserPointers.approved.txt  test_parser.ParserTests.ParserStdin.approved.txt  test_symtab.SymTabTests.SymTabFunctions.approved.txt  test_symtab.SymTabTests.SymTabStdin.approved.txt  test_x86_64_gen.x86GenTests.x86GenControlFlow.approved.txt  test_x86_64_gen.x86GenTests.x86GenPointers.approved.txt  test_x86_64_gen.x86GenTests.x86GenStructs.approved.txt
testing/samples/: asm_and_errors.sn  functions.sn  pointers.sn  stdin.sn  structs.sn
testing/snapshots/: test_ir.IrTests.IrAsmAndErrors.approved.txt  test_ir.IrTests.IrControlFlow.approved.txt  test_ir.IrTests.IrEmpty.approved.txt  test_ir.IrTests.IrFunctions.approved.txt  test_ir.IrTests.IrPointers.approved.txt  test_ir.IrTests.IrStdin.approved.txt  test_ir.IrTests.IrStructs.approved.txt  test_ir.IrTests.IrVarDecl.approved.txt  test_lexer.LexerTests.LexerAsmAndErrors.approved.txt  test_lexer.LexerTests.LexerControlFlow.approved.txt  test_lexer.LexerTests.LexerEmpty.approved.txt  test_lexer.LexerTests.LexerFunctions.approved.txt  test_lexer.LexerTests.LexerPointers.approved.txt  test_lexer.LexerTests.LexerStdin.approved.txt  test_lexer.LexerTests.LexerStructs.approved.txt  test_lexer.LexerTests.LexerVarDecl.approved.txt  test_parser.ParserTests.ParserAsmAndErrors.approved.txt  test_parser.ParserTests.ParserControlFlow.approved.txt  test_parser.ParserTests.ParserEmpty.approved.txt  test_parser.ParserTests.ParserFunctions.approved.txt  test_parser.ParserTests.ParserPointers.approved.txt  test_parser.ParserTests.ParserStdin.approved.txt  test_parser.ParserTests.ParserStructs.approved.txt  test_parser.ParserTests.ParserVarDecl.approved.txt  test_symtab.SymTabTests.SymTabControlFlow.approved.txt  test_symtab.SymTabTests.SymTabEmpty.approved.txt  test_symtab.SymTabTests.SymTabFunctions.approved.txt  test_symtab.SymTabTests.SymTabPointers.approved.txt  test_x86_64_gen.x86GenTests.x86GenAsmAndErrors.approved.txt  test_x86_64_gen.x86GenTests.x86GenControlFlow.approved.txt  test_x86_64_gen.x86GenTests.x86GenEmpty.approved.txt  test_x86_64_gen.x86GenTests.x86GenFunctions.approved.txt  test_x86_64_gen.x86GenTests.x86GenPointers.approved.txt  test_x86_64_gen.x86GenTests.x86GenStdin.approved.txt  test_x86_64_gen.x86GenTests.x86GenStructs.approved.txt  test_x86_64_gen.x86GenTests.x86GenVarDecl.approved.txt
testing/snapshots/old-snapshots/: test_ir.IrTests.IrAsmAndErrors.approved.txt  test_ir.IrTests.IrVarDecl.approved.txt  test_lexer.LexerTests.LexerAsmAndErrors.approved.txt  test_lexer.LexerTests.LexerControlFlow.approved.txt  test_lexer.LexerTests.LexerStdin.approved.txt  test_lexer.LexerTests.LexerStructs.approved.txt  test_lexer.LexerTests.LexerVarDecl.approved.txt  test_parser.ParserTests.ParserFunctions.approved.txt  test_parser.ParserTests.ParserStructs.approved.txt  test_parser.ParserTests.ParserVarDecl.approved.txt  test_symtab.SymTabTests.SymTabStructs.approved.txt  test_symtab.SymTabTests.SymTabVarDecl.approved.txt  test_x86_64_gen.x86GenTests.x86GenAsmAndErrors.approved.txt  test_x86_64_gen.x86GenTests.x86GenFunctions.approved.txt  test_x86_64_gen.x86GenTests.x86GenStdin.approved.txt  test_x86_64_gen.x86GenTests.x86GenVarDecl.approved.txt
(+89 files in other folders)
